SERVER-50557 Remove unused ExpressionContext::jsFnTimeoutMillis member var